# prewarm-coffee

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  Trunk.toml  index.html  package-lock.json  playwright.config.ts
.github/workflows/: deploy.yml
src/: analytics.rs  haptics.rs  lib.rs  storage.rs
src/components/: accordion_group.rs  app.rs  compare_panel.rs  comparison_metrics.rs  cooling_chart.rs  heat_equation_panel.rs  lumped_panel.rs  mobile_summary.rs  mod.rs  mug_controls.rs  nav_bar.rs  profile_chart.rs  simulation_results.rs  simulator_overlay.rs  solver_toggle.rs  temperature_display.rs
src/pages/: about.rs  mod.rs  not_found.rs  theory.rs  theory_heat_equation.rs  theory_lumped.rs
src/physics/: cooling.rs  cross_solver_tests.rs  heat_equation_analytical.rs  heat_equation_numerical.rs  lumped_analytical.rs  lumped_numerical.rs  materials.rs  metrics.rs  mod.rs  perf_tests.rs
static/: CNAME  styles.css
static/katex/: katex.min.css
tests/: perf-baselines-unit.json
tests/e2e/: navigation.spec.ts  perf-baselines.json  perf.spec.ts  smoke.spec.ts
