[package]
name = "prewarm-coffee"
version = "0.1.0"
edition = "2021"
description = "Interactive website explaining why preheating your mug keeps coffee warmer"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Storage", "StorageEvent", "Window", "Document", "History", "ScrollRestoration", "EventTarget", "Navigator", "Element", "MouseEvent", "DomRect"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3
